--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
       crossorigin="anonymous"
     />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
-      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
@@ -25,8 +29,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning"></div>
-    <h1>Hello World</h1>
-    <p>Hi there</p>
+    <div class="d-flex bg-warning">
+      <h1>Hello World</h1>
+      <p>Hi there</p>
+    </div>
   </body>
 </html>
