added intagram sign from font awesome

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/1265a80bce.js"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,6 +33,7 @@
     <div class="d-flex bg-warning">
       <h1>Hello World</h1>
       <p>Hi there</p>
+      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
