--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       src="https://kit.fontawesome.com/1265a80bce.js"
       crossorigin="anonymous"
     ></script>
-
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,9 +29,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hi there</p>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Patricia Pereira</h1>
+      <h2>Front-end developer based in Portugal</h2>
+      <a href="#" class="btn btn-primary">Contact me </a>
       <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
