--- a/index.html
+++ b/index.html
@@ -26,15 +26,51 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&family=Source+Serif+Pro:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>HERO page</title>
   </head>
   <body>
     <div class="hero">
       <p>Hello, I am</p>
       <h1>Patricia Pereira</h1>
-      <h2>Front-end developer based in Portugal</h2>
+      <h2 class="mb-5">Front-end developer based in Portugal</h2>
       <a href="#" class="btn btn-primary">Contact me </a>
       <i class="fa-brands fa-instagram"></i>
     </div>
+    <p class="text-center m-5">
+        Featured Project which my best projects be choice to show
+      </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt=""/>
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h1>Yogurt Project</h1>
+            <p class="text-muted m-4">
+        Far far away, behind the word mountains, far from the countries Vokalia
+        and Consonantia, there live the blind texts. Separated they live in
+        Bookmarksgrove right at the coast of the Semantics, a large language
+        ocean. A small river named Duden flows by
+            </p>
+      <a href="" class="btn btn-branding-outline">View detail project</a>
+      </div>
+    </div>
+    <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt=""/>
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h1>Weather App</h1>
+            <p class="text-muted m-4">
+        Far far away, behind the word mountains, far from the countries Vokalia
+        and Consonantia, there live the blind texts. Separated they live in
+        Bookmarksgrove right at the coast of the Semantics, a large language
+        ocean. A small river named Duden flows by
+            </p>
+      <a href="" class="btn btn-branding-outline">View detail project</a>
+      </div>
+  
   </body>
 </html>
